# vagabot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: __main__.py  config.py  database.py  gui.py  gupy.py  linkedin.py
data/: palavras-chave.txt
extension/: background.js  manifest.json
extension/content/: gupy.js  linkedin.js
extension/lib/: validator.js
extension/popup/: popup.html  popup.js
